1-traffic-mirroring/0-dep-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: kubis-gw
  lables:
    app: kubis-gw
spec:
  selector:
    app: kubis-gw
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: kubis-rest
  lables:
    app: kubis-rest
spec:
  selector:
    app: kubis-rest
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: "v1"
kind: "DeploymentConfig"
metadata:
  name: kubis-gw
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: kubis-gw
        version: v0-1
    spec:
      containers:
      - name: kubis-gw
        image: docker-registry.default.svc:5000/kubis/kubis-gw:0.4
        ports:
        - containerPort: 8080
  replicas: 1
  triggers:
  - type: ConfigChange
  strategy:
    type: Rolling
---
apiVersion: "v1"
kind: "DeploymentConfig"
metadata:
  name: kubis-rest-0-3
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: kubis-rest
        version: v0-3
    spec:
      containers:
      - name: kubis-rest
        image: docker-registry.default.svc:5000/kubis/kubis-rest:0.3.6
        ports:
        - containerPort: 8080
  replicas: 1
  triggers:
  - type: ConfigChange
  strategy:
    type: Rolling
