1-traffic-mirroring/3-dep-debug.yaml
apiVersion: "v1"
kind: "DeploymentConfig"
metadata:
  name: kubis-gw-debug
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: kubis-gw
        version: v0-1-d
        debug: kubis-gw-debug
    spec:
      containers:
      - name: kubis-gw
        image: docker-registry.default.svc:5000/kubis/kubis-gw:0.4
        command: ["/bin/bash","-c", "java -Xdebug -Xrunjdwp:transport=dt_socket,server=y,address=5005,suspend=y -jar /deployments/kubisgw-1.0.0-SNAPSHOT-fat.jar"]
        ports:
        - containerPort: 8080
        - containerPort: 5005
  replicas: 1
  triggers:
  - type: ConfigChange
  strategy:
    type: Rolling
---
kind: Service
apiVersion: v1
metadata:
  name: kubis-gw-debug
  lables:
    app: kubis-gw-debug
spec:
  selector:
    debug: kubis-gw-debug
  ports:
  - name: http
    port: 8080
  - name: debug
    port: 5005
