1-traffic-mirroring/2-rest-dest-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kubis-rest
spec:
  host: kubis-rest
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v0-3
    labels:
      version: v0-3
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubis-rest
spec:
  hosts:
    - kubis-rest
  http:
  - route:
    - destination:
        host: kubis-rest
        subset: v0-3
