1-traffic-mirroring/4-gw-mirror.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kubis-gw
spec:
  host: kubis-gw
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: 0-1
    labels:
      version: v0-1
  - name: 0-1-d
    labels:
      version: v0-1-d
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubis-gw
spec:
  hosts:
    - kubis-gw
  http:
  - route:
    - destination:
        host: kubis-gw
        subset: 0-1
      weight: 100
    mirror:
      host: kubis-gw 
      subset: 0-1-d
